Frankbelford/uatv1ba/force-app/main/default/objects/Portal_V2_Hours_Submission_Columns__mdt/Portal_V2_Hours_Submission_Columns__mdt.object-meta.xml
<CustomObject>
    <label>Portal V2 - Hours Submission Columns</label>
    <pluralLabel>Portal V2 - Hours Submission Columns</pluralLabel>
</CustomObject>