Frankbelford/uatv1ba/force-app/main/default/objects/Portal_V2_Hours_Submission_Columns__mdt/fields/Display_In_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Display_In_Mobile__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display In Mobile</label>
    <type>Checkbox</type>
</CustomField>