Frankbelford/uatv1ba/force-app/main/default/objects/Portal_V2_Hours_Submission_Columns__mdt/fields/Filter_Type__c.field-meta.xml
<CustomField>
    <fullName>Filter_Type__c</fullName>
    <label>Filter Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Date</fullName>
                <default>true</default>
                <label>Date</label>
            </value>
            <value>
                <fullName>Text</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>