Frankbelford/uatv1ba/force-app/main/default/objects/Portal_V2_Hours_Submission_Columns__mdt/fields/Mobile_Column_Order__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Column_Order__c</fullName>
    <label>Mobile Column Order</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>